--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongodb": "^6.17.0",
     "mongoose": "^8.4.4",
     "nodemon": "^3.1.10",
-    "validator": "^13.12.0"
+    "validator": "^13.12.0",
+    "common-utils": "file:../common-utils"
   }
 }
